--- a/index.css
+++ b/index.css
@@ -10,11 +10,16 @@ body {
 .header {
     background-color: #EBD3A7;
     display: flex;
-    /* align-items: flex-start; */
+    align-items: center; 
     padding: 10px 10px 10px 10px;
 }
 
-.header>.right-links {
+.header img {
+    height: 50px;
+    width: 50px;
+    clip-path: circle();
+}
+.header> .right-links {
     margin: 0 0 0 auto;
 }
 
@@ -35,9 +40,9 @@ body {
 .layer--one {
     background-color: #A3D9C9;
     height: 300px;
-    gap: 10px;
     align-items: center;
     flex-wrap: wrap;
+    justify-content: space-around;
     padding: 0px 20px 0px 20px;
 }
 
@@ -48,10 +53,17 @@ body {
 }
 
 .layer--one .left-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
     flex-grow: 1;
     flex-basis: 160px;
+    max-width: fit-content;
 }
 
+.layer--one .left-side button{
+    align-self: baseline;
+}
 .layer--one img {
     width: 250px;
     height: 250px;
@@ -59,11 +71,11 @@ body {
 
 .layer--two {
     background-color: #F5F5F5;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
-.layer--two h2 {
-    align-self: baseline;
-}
 
 .layer--three {
     background-image: url("images/lofi-summer4.jpg");
@@ -74,16 +86,19 @@ body {
     background-size: cover;
 
     color: #fff;
-    font-size: 26px;
+    font-size: 50px;
     font-weight: bold;
-
-    justify-content: flex-end;
+    
+    justify-content: center;
+    align-items: center;
 }
 
 .layer--four {
     background-color: #A3D9C9;
     justify-content: center;
     align-items: center;
+
+    height:300px;
 }
 
 button {
@@ -92,7 +107,7 @@ button {
     color: #fff;
     border-radius: 5px;
     padding: 10px;
-
+    margin: 20px 0px 0px 0px;
 }
 
 button:hover {
@@ -105,6 +120,25 @@ button:active {
 }
 
 .footer {
+    display: flex;
+    justify-content: center;
     background-color: #EBD3A7;
     /* margin: auto 0 0 0; */
+}
+
+h2 {
+    margin: 0px 0px 0px 0px;
+}
+
+p {
+    margin: 0px 0px 0px 0px;
+}
+
+a {
+    color:#4A5568;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #fff;
 }
